--- a/.air.toml
+++ b/.air.toml
@@ -6,7 +6,7 @@ tmp_dir = "tmp"
 args_bin = []
 bin = "tmp\\main.exe"
 cmd = "go build -o ./tmp/main.exe ./cmd/app/."
-delay = 1000
+delay = 500
 exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
 exclude_file = []
 exclude_regex = ["_test.go", "_templ.go"]
@@ -16,7 +16,7 @@ full_bin = ""
 include_dir = []
 include_ext = ["go", "tpl", "tmpl", "html", "templ", "js", "css"]
 include_file = []
-kill_delay = "0s"
+kill_delay = "600ms"
 log = "build-errors.log"
 poll = false
 poll_interval = 0
@@ -24,7 +24,7 @@ post_cmd = []
 pre_cmd = ["npm run air"]
 rerun = false
 rerun_delay = 500
-send_interrupt = false
+send_interrupt = true
 stop_on_error = false
 
 [color]
