--- a/.air.toml
+++ b/.air.toml
@@ -25,7 +25,7 @@ pre_cmd = ["npm run air"]
 rerun = false
 rerun_delay = 500
 send_interrupt = true
-stop_on_error = false
+stop_on_error = true
 
 [color]
 app = ""
