--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "winbuild": "npm-run-all --parallel tailwind templ --sequential wingo",
     "air": "npm-run-all --sequential tailwind templ",
     "dev": "npx tailwindcss -i internal/static/style/input.css -o internal/static/style/output.css --watch | air",
-    "exec": "./app.exe",
-    "start": "npm run winbuild && .\\app.exe"
+    "exec": ".\\app.exe",
+    "start": "npm-run-all --sequential winbuild exec"
   },
   "devDependencies": {
     "daisyui": "^4.5.0",
