--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.so
 *.dylib
 
+
+app
 # Test binary, built with `go test -c`
 *.test
 
@@ -26,5 +28,5 @@ tmp/
 
 internal/static/style/output.css
 .env
-
+bun.lockb
 
