--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "scripts": {
-    "tailwind": "tailwindcss -i internal/static/style/input.css -o internal/static/style/output.css",
-    "templ": "templ generate",
-    "linuxgo": "CGO_ENABLED=0 GOOS=linux go build -o ./app ./cmd/app/.",
-    "wingo": "go build -o ./app.exe ./cmd/app/.",
-    "linbuild": "npm-run-all --parallel tailwind templ --sequential linuxgo",
-    "winbuild": "npm-run-all --parallel tailwind templ --sequential wingo",
-    "air": "npm-run-all --sequential tailwind templ",
-    "dev": " tailwindcss -i internal/static/style/input.css -o internal/static/style/output.css --watch | air",
-    "exec": ".\\app.exe",
-    "start:windows": "npm-run-all --sequential winbuild exec",
-    "exec:linux": "./app",
-    "build:linux": "npm-run-all --sequential linbuild",
-    "delete:linux": "rm ./app",
-    "start:linux": "npm-run-all --sequential build:linux exec:linux delete:linux"
-  },
-  "devDependencies": {
-    "daisyui": "^4.5.0",
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.4.1",
-    "@types/bun": "latest"
-  },
-  "name": "lorem-ipsum",
-  "module": "index.ts",
-  "type": "module",
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+    "scripts": {
+        "tailwind": "tailwindcss -i internal/static/style/input.css -o internal/static/style/output.css",
+        "templ": "templ generate",
+        "linuxgo": "CGO_ENABLED=0 GOOS=linux go build -o ./app ./cmd/app/.",
+        "wingo": "go build -o ./app.exe ./cmd/app/.",
+        "linbuild": "npm-run-all --parallel tailwind templ --sequential linuxgo",
+        "winbuild": "npm-run-all --parallel tailwind templ --sequential wingo",
+        "air": "npm-run-all --sequential tailwind templ",
+        "dev": " tailwindcss -i internal/static/style/input.css -o internal/static/style/output.css --watch | air",
+        "exec:linux": "./app",
+        "build:linux": "npm-run-all --sequential templ linuxgo --parallel tailwind",
+        "delete:linux": "rm ./app",
+        "start:linux": "npm-run-all --sequential build:linux exec:linux delete:linux",
+        "exec:windows": ".\\app.exe",
+        "build:windows": "npm-run-all --sequential templ wingo --parallel tailwind",
+        "delete:windows": "rm ./app",
+        "start:windows": "npm-run-all --sequential build:linux exec:linux delete:linux"
+    },
+    "devDependencies": {
+        "daisyui": "^4.5.0",
+        "npm-run-all": "^4.1.5",
+        "tailwindcss": "^3.4.1",
+        "@types/bun": "latest"
+    },
+    "name": "lorem-ipsum",
+    "module": "index.ts",
+    "type": "module",
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    }
 }
