--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
         "start:windows": "npm-run-all --sequential build:windows exec:windows delete:windows"
     },
     "devDependencies": {
+        "@types/bun": "latest",
         "daisyui": "^4.5.0",
         "npm-run-all": "^4.1.5",
-        "tailwindcss": "^3.4.1",
-        "@types/bun": "latest"
+        "tailwindcss": "^3.4.1"
     },
     "name": "lorem-ipsum",
     "module": "index.ts",
