--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -38,6 +38,9 @@ jobs:
           key: ${{ secrets.REMOTE_KEY }}
           script: |
             cd App/lorem-ipsum
-            docker compose ls
             docker compose up -d --pull muhhae/lorem-ipsum 
+            docker image prune
+            docker images 
             docker compose ls
+            docker compose ps
+            docker compose logs
