use godotenv autoload

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,11 +7,12 @@ services:
       - MONGO_URI=mongodb://mongodb:27017/data
       - PORT=8080
       - JWT_SECRET=${JWT_SECRET}
+      - BASE_URL=${BASE_URL}
     depends_on:
       - mongodb
   mongodb:
     image: mongo
-    ports: 
+    ports:
       - '27017:27017'
     volumes:
       - mongodb-data:/data/db
